# oss-search

./: .gitignore  README.md  SKILL.md  进度看板.md
engine/: README.md  e2e_report.html  e2e_report.md  pyproject.toml  requirements.txt  test_spec.json
engine/oss_search/: __init__.py  __main__.py  adapters.py  collect.py  config.py  intent.py  llm_client.py  merge.py  models.py  report.py  score.py
engine/tests/: test_adapters.py  test_cli.py  test_collect.py  test_intent.py  test_merge.py  test_report.py  test_score.py
engine/tests/fixtures/: github_search.json  npm_pypi_fixtures.json  test_spec.json
任务卡/: TASK-001-意图拆解模块.md  TASK-002-采集框架与GitHub适配器.md  TASK-003-包仓库适配器.md  TASK-004-内容源适配器.md  TASK-005-归并去重.md  TASK-006-质量评级引擎.md  TASK-007-排序与报告.md  TASK-008-CLI入口与串联.md  TASK-009-Skill封装.md  TASK-010-打包与分发.md
规范/: 信源清单.yaml  意图拆解Schema.md  技术规范.md
